add category to studio, add location to studio, create table with liquibase

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,2 +1,4 @@
 databaseChangeLog:
-  -
+  - include:
+      file: /04.02.2024/04.02.2024-create-category-and-studio-tables.yaml
+      relativeToChangelogFile: true
